updated protos to have free-form environment definitions
