# flyteidl/gen/pb-go/flyteidl/service/flyteadmin/model_core_environment_type.go
@@ -1,17 +1,0 @@
-/*
- * flyteidl/service/admin.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package flyteadmin
-
-type CoreEnvironmentType string
-
-// List of coreEnvironmentType
-const (
-	CoreEnvironmentTypeFAST_TASK CoreEnvironmentType = "FAST_TASK"
-)
