# flyteidl/gen/pb-go/flyteidl/service/flyteadmin/model_core_execution_environment_assignment.go
@@ -12,6 +12,7 @@ package flyteadmin
 type CoreExecutionEnvironmentAssignment struct {
 	Id string `json:"id,omitempty"`
 	NodeIds []string `json:"node_ids,omitempty"`
-	Environment *CoreExecutionEnvironment `json:"environment,omitempty"`
-	EnvironmentSpec *CoreExecutionEnvironmentSpec `json:"environment_spec,omitempty"`
+	Type_ string `json:"type,omitempty"`
+	Environment *ProtobufStruct `json:"environment,omitempty"`
+	EnvironmentSpec *ProtobufStruct `json:"environment_spec,omitempty"`
 }
