# flyteidl/gen/pb-go/flyteidl/service/flyteadmin/model_core_fast_task_environment.go
@@ -1,16 +1,0 @@
-/*
- * flyteidl/service/admin.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package flyteadmin
-
-type CoreFastTaskEnvironment struct {
-	QueueId string `json:"queue_id,omitempty"`
-	Namespace string `json:"namespace,omitempty"`
-	PodName string `json:"pod_name,omitempty"`
-}
