# flyteidl/gen/pb_python/flyteidl/service/flyteadmin/flyteadmin/models/core_execution_environment.py
@@ -1,144 +1,0 @@
-# coding: utf-8
-
-"""
-    flyteidl/service/admin.proto
-
-    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)  # noqa: E501
-
-    OpenAPI spec version: version not set
-    
-    Generated by: https://github.com/swagger-api/swagger-codegen.git
-"""
-
-
-import pprint
-import re  # noqa: F401
-
-import six
-
-from flyteadmin.models.core_environment_type import CoreEnvironmentType  # noqa: F401,E501
-from flyteadmin.models.core_fast_task_environment import CoreFastTaskEnvironment  # noqa: F401,E501
-
-
-class CoreExecutionEnvironment(object):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    """
-    Attributes:
-      swagger_types (dict): The key is attribute name
-                            and the value is attribute type.
-      attribute_map (dict): The key is attribute name
-                            and the value is json key in definition.
-    """
-    swagger_types = {
-        'type': 'CoreEnvironmentType',
-        'fast_task': 'CoreFastTaskEnvironment'
-    }
-
-    attribute_map = {
-        'type': 'type',
-        'fast_task': 'fast_task'
-    }
-
-    def __init__(self, type=None, fast_task=None):  # noqa: E501
-        """CoreExecutionEnvironment - a model defined in Swagger"""  # noqa: E501
-
-        self._type = None
-        self._fast_task = None
-        self.discriminator = None
-
-        if type is not None:
-            self.type = type
-        if fast_task is not None:
-            self.fast_task = fast_task
-
-    @property
-    def type(self):
-        """Gets the type of this CoreExecutionEnvironment.  # noqa: E501
-
-
-        :return: The type of this CoreExecutionEnvironment.  # noqa: E501
-        :rtype: CoreEnvironmentType
-        """
-        return self._type
-
-    @type.setter
-    def type(self, type):
-        """Sets the type of this CoreExecutionEnvironment.
-
-
-        :param type: The type of this CoreExecutionEnvironment.  # noqa: E501
-        :type: CoreEnvironmentType
-        """
-
-        self._type = type
-
-    @property
-    def fast_task(self):
-        """Gets the fast_task of this CoreExecutionEnvironment.  # noqa: E501
-
-
-        :return: The fast_task of this CoreExecutionEnvironment.  # noqa: E501
-        :rtype: CoreFastTaskEnvironment
-        """
-        return self._fast_task
-
-    @fast_task.setter
-    def fast_task(self, fast_task):
-        """Sets the fast_task of this CoreExecutionEnvironment.
-
-
-        :param fast_task: The fast_task of this CoreExecutionEnvironment.  # noqa: E501
-        :type: CoreFastTaskEnvironment
-        """
-
-        self._fast_task = fast_task
-
-    def to_dict(self):
-        """Returns the model properties as a dict"""
-        result = {}
-
-        for attr, _ in six.iteritems(self.swagger_types):
-            value = getattr(self, attr)
-            if isinstance(value, list):
-                result[attr] = list(map(
-                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
-                    value
-                ))
-            elif hasattr(value, "to_dict"):
-                result[attr] = value.to_dict()
-            elif isinstance(value, dict):
-                result[attr] = dict(map(
-                    lambda item: (item[0], item[1].to_dict())
-                    if hasattr(item[1], "to_dict") else item,
-                    value.items()
-                ))
-            else:
-                result[attr] = value
-        if issubclass(CoreExecutionEnvironment, dict):
-            for key, value in self.items():
-                result[key] = value
-
-        return result
-
-    def to_str(self):
-        """Returns the string representation of the model"""
-        return pprint.pformat(self.to_dict())
-
-    def __repr__(self):
-        """For `print` and `pprint`"""
-        return self.to_str()
-
-    def __eq__(self, other):
-        """Returns true if both objects are equal"""
-        if not isinstance(other, CoreExecutionEnvironment):
-            return False
-
-        return self.__dict__ == other.__dict__
-
-    def __ne__(self, other):
-        """Returns true if both objects are not equal"""
-        return not self == other
